Bug 392380 - Export dialog uses the wrong file picker
Summary: Export dialog uses the wrong file picker
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-27 00:33 UTC by Matthew Trescott
Modified: 2018-03-27 21:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Trescott 2018-03-27 00:33:33 UTC
If one chooses File > Export, the button to choose a filename to save opens a dialog to open a file instead.
Comment 1 Alexander Semke 2018-03-27 10:30:34 UTC
(In reply to Matthew Trescott from comment #0)
> If one chooses File > Export, the button to choose a filename to save opens
> a dialog to open a file instead.
This was fixed recently in https://cgit.kde.org/labplot.git/commit/?id=c99a732664eca8a151e8a6ee64dff3e4308db639. Can you check the current code in master and try again?
Comment 2 Matthew Trescott 2018-03-27 19:19:23 UTC
Ah, sorry, I forgot to specify that I was exporting a worksheet, not a spreadsheet. Indeed, choosing a file to export a spreadsheet to works fine, but not for worksheets.
Comment 3 Alexander Semke 2018-03-27 21:05:43 UTC
Git commit 32a154e7546ac3ef8c47a7f462208d4de76b0ebf by Alexander Semke.
Committed on 27/03/2018 at 21:05.
Pushed by asemke into branch 'master'.

User SaveFile instead of OpenFile dialog in WorksheetSpreadsheetDialog to allow the user to create new files with it.
FIXED-IN: 2.5

M  +1    -1    src/kdefrontend/worksheet/ExportWorksheetDialog.cpp

https://commits.kde.org/labplot/32a154e7546ac3ef8c47a7f462208d4de76b0ebf
Comment 4 Alexander Semke 2018-03-27 21:06:26 UTC
(In reply to Matthew Trescott from comment #2)
> Ah, sorry, I forgot to specify that I was exporting a worksheet, not a
> spreadsheet. Indeed, choosing a file to export a spreadsheet to works fine,
> but not for worksheets.
Oh. Somehow we missed this one... Thanks for reporting this. I just submitted a fix.