User SaveFile instead of OpenFile dialog in WorksheetSpreadsheetDialog to allow the user to create new files with it.

BUG: 392380
FIXED-IN: 2.5