src/kdefrontend/worksheet/ExportWorksheetDialog.cpp
@@ -228,7 +228,7 @@ void ExportWorksheetDialog::selectFile() {
 	else
 		format = i18n("Portable Network Graphics (PNG) (*.png *.PNG)");
 
-	const QString path = QFileDialog::getOpenFileName(this, i18n("Export to file"), dir, format);
+	const QString path = QFileDialog::getSaveFileName(this, i18n("Export to file"), dir, format);
 	if (!path.isEmpty()) {
 		ui->leFileName->setText(path);
 
